remove warm pool api
